[metadata]
name = vstutils
version = attr: vstutils.__version__
description = VST Utils Framework for fast create web-application
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache License 2.0
author = VST Consulting
author_email = sergey.k@vstconsulting.net
url = https://github.com/vstconsulting/vstutils
keywords = web, app, spa, vue, pwa, framework, openapi
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Operating System :: POSIX
    License :: OSI Approved :: Apache Software License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
setup_requires =
    cython>0.29,<0.30

[build_sphinx]
project = 'VST Utils'

[aliases]
