[metadata]
name = vstutils
version = attr: vstutils.__version__
description = VST Utils Framework for fast create web-application
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache License 2.0
author = VST Consulting
author_email = sergey.k@vstconsulting.net
url = https://github.com/vstconsulting/vstutils
keywords = web, app, spa, vue, pwa, framework, openapi
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Operating System :: POSIX
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8

[build_sphinx]
project = 'VST Utils'

[aliases]

[mypy]
python_version = 3.8
allow_redefinition = True
check_untyped_defs = True
disable_error_code = attr-defined,assignment,index,operator,arg-type,misc,call-overload,union-attr,valid-type,func-returns-value
plugins =
    mypy_django_plugin.main,
    mypy_drf_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "vstutils.settings"

[mypy-django_celery_beat.*]
ignore_missing_imports = True

[mypy-ldap.*]
ignore_missing_imports = True

[mypy-uwsgi.*]
ignore_missing_imports = True

[mypy-docs.*]
ignore_missing_imports = True

[mypy-mysql.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-jsmin.*]
ignore_missing_imports = True

[mypy-drf_yasg2.*]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-environ.*]
ignore_missing_imports = True
